# service-health-monitor

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/workflows/: build-dev.yml  ci.yml  release.yml
app/: __init__.py  checker.py  config.py  main.py  models.py
